--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hello-world",
     "version": "1.0.0",
-    "start": "nodemon hello.js",
+    "start": "nodemon index.js",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -13,6 +13,8 @@
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "express": "^4.16.3",
+        "moment": "^2.22.2",
+        "moment-timezone": "^0.5.21",
         "mongoose": "^5.1.6",
         "short-id": "0.1.0-1"
     }
