--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.21",
         "mongoose": "^5.1.6",
+        "pino": "^4.17.3",
         "short-id": "0.1.0-1"
     }
 }
