--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "express": "^4.16.3",
+        "helmet": "^3.12.1",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.21",
         "mongoose": "^5.1.6",
